All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>Address Type</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Billing Address</fullName>
            </value>
            <value>
                <fullName>Account Shipping Address</fullName>
            </value>
            <value>
                <fullName>Contact Mailing Address</fullName>
            </value>
            <value>
                <fullName>Contact Other Address</fullName>
            </value>
            <value>
                <fullName>Installed Product Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>