All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <description>Indicates who should be billed for shipping charges</description>
    <inlineHelpText>Indicates who should be billed for shipping charges</inlineHelpText>
    <label>Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sender</fullName>
            </value>
            <value>
                <fullName>Recipient</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>