All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that canceled this RMA/shipment order.</description>
    <inlineHelpText>User that canceled this RMA/shipment order.</inlineHelpText>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMA_Shipment_Order_Canceled_By</relationshipName>
    <type>Lookup</type>
</CustomField>