All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Canceled_On__c.field-meta.xml
<CustomField>
    <fullName>Canceled_On__c</fullName>
    <description>Date/time when this RMA/shipment order was canceled.</description>
    <inlineHelpText>Date/time when this RMA/shipment order was canceled.</inlineHelpText>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>