All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support Case related to this RMA or shipment. Is a lookup to an existing salesforce case record</description>
    <inlineHelpText>Support Case related to this RMA or shipment. Is a lookup to an existing salesforce case record</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>RMA_Shipment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>