All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Delivery_Option__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option__c</fullName>
    <description>Indicates special delivery requirements such as Saturday delivery etc.</description>
    <inlineHelpText>Indicates special delivery requirements such as Saturday delivery etc.</inlineHelpText>
    <label>Delivery Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Two Day</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>