All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <description>“City” part of the destination address</description>
    <inlineHelpText>“City” part of the destination address</inlineHelpText>
    <label>To City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>