All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <description>“State/Province” part of the destination address</description>
    <inlineHelpText>“State/Province” part of the destination address</inlineHelpText>
    <label>To State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>