All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>Destination_Street__c</fullName>
    <description>“Street” part of the destination address</description>
    <inlineHelpText>“Street” part of the destination address</inlineHelpText>
    <label>To Street</label>
    <type>TextArea</type>
</CustomField>