All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Destination_Zip__c.field-meta.xml
<CustomField>
    <fullName>Destination_Zip__c</fullName>
    <description>“Zip/Postal Code” part of the destination address</description>
    <inlineHelpText>“Zip/Postal Code” part of the destination address</inlineHelpText>
    <label>To Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>