All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <description>Date when the products are expected to be shipped to the customer. Useful for planning and allocating resources</description>
    <inlineHelpText>Date when the products are expected to be shipped to the customer. Useful for planning and allocating resources</inlineHelpText>
    <label>Expected Ship Date</label>
    <type>Date</type>
</CustomField>