All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>