All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/IsPartnerRecord__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the indication of Partner Record.</description>
    <inlineHelpText>This is the indication of Partner Record.</inlineHelpText>
    <label>IsPartnerRecord</label>
    <type>Checkbox</type>
</CustomField>