All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Number_of_units_returned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units_returned__c</fullName>
    <label>Number of units returned</label>
    <summarizedField>RMA_Shipment_Line__c.Expected_Quantity2__c</summarizedField>
    <summaryForeignKey>RMA_Shipment_Line__c.RMA_Shipment_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>