All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>