All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Order Type</description>
    <inlineHelpText>Choose the Order type</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>