All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account, Set by Trigger.</description>
    <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parts Orders (Partner Account)</relationshipLabel>
    <relationshipName>RMA_Shipment_Order_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>