All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Parts_Request__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ServiceMax Parts Request for which this shipment order was created.</description>
    <inlineHelpText>The ServiceMax Parts Request for which this shipment order was created.</inlineHelpText>
    <label>Parts Request</label>
    <referenceTo>Parts_Request__c</referenceTo>
    <relationshipName>RMA_Shipment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>