All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Receiving_Courier__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Courier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the courier company the customer used to ship the product. Is a lookup to an existing salesforce account record</description>
    <inlineHelpText>Name of the courier company the customer used to ship the product. Is a lookup to an existing salesforce account record</inlineHelpText>
    <label>Receiving Courier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RMA_Shipment_Order_Rcv_Courier</relationshipName>
    <type>Lookup</type>
</CustomField>