All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/RMA_Age_Bucket__c.field-meta.xml
<CustomField>
    <fullName>RMA_Age_Bucket__c</fullName>
    <description>Age of the RMA placed in various buckets for reporting</description>
    <formula>IF ((TODAY() - Expected_Receive_Date__c) &lt; 0, &quot;Not due yet&quot;, 
IF ((TODAY() - Expected_Receive_Date__c) = 0, &quot;Due Today&quot;, 
IF (AND( (TODAY() - Expected_Receive_Date__c) &gt; 0, (TODAY() - Expected_Receive_Date__c) &lt;= 7), &quot;Less Than 8 days&quot;, 
IF ((TODAY() - Expected_Receive_Date__c) &lt;= 15, &quot;8 To 15 days&quot;, 
IF ((TODAY() - Expected_Receive_Date__c) &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the RMA placed in various buckets for reporting</inlineHelpText>
    <label>RMA Age Bucket</label>
    <type>Text</type>
</CustomField>