All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <label>RMA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>