All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Shipment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to another RMA or shipment order number within ServiceMax</description>
    <inlineHelpText>Reference to another RMA or shipment order number within ServiceMax</inlineHelpText>
    <label>Parts Order Reference</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipName>RMA_Shipment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>