All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Shipping_Receiving_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Receiving_Notes__c</fullName>
    <description>Instructions for shipping department/courier if it is a shipment, or for the receiving department if it is an RMA. Free text entry.</description>
    <inlineHelpText>Instructions for shipping department/courier if it is a shipment, or for the receiving department if it is an RMA. Free text entry.</inlineHelpText>
    <label>Shipping/Receiving Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>