All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Source_City__c.field-meta.xml
<CustomField>
    <fullName>Source_City__c</fullName>
    <description>“City” part of the source address</description>
    <inlineHelpText>“City” part of the source address</inlineHelpText>
    <label>From City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>