All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the internal/customer site from which the products are shipped. Is a lookup to an existing site record in ServiceMax</description>
    <inlineHelpText>Name of the internal/customer site from which the products are shipped. Is a lookup to an existing site record in ServiceMax. Choose an existing site OR enter address details.</inlineHelpText>
    <label>From Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Parts Orders (Source Location)</relationshipLabel>
    <relationshipName>RMA_Shipment_Order_From</relationshipName>
    <type>Lookup</type>
</CustomField>