All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Source_Street__c.field-meta.xml
<CustomField>
    <fullName>Source_Street__c</fullName>
    <description>“Street” part of the source address</description>
    <inlineHelpText>“Street” part of the source address</inlineHelpText>
    <label>From Street</label>
    <type>TextArea</type>
</CustomField>