All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Total_Price2__c.field-meta.xml
<CustomField>
    <fullName>Total_Price2__c</fullName>
    <description>Sum of line price. Calculated automatically</description>
    <inlineHelpText>Total Price</inlineHelpText>
    <label>Total Price</label>
    <summarizedField>RMA_Shipment_Line__c.Total_Line_Price2__c</summarizedField>
    <summaryForeignKey>RMA_Shipment_Line__c.RMA_Shipment_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>