All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Shipment tracking number given by the courier company</description>
    <inlineHelpText>Shipment tracking number given by the courier company</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>