All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/listViews/All_RMA.listView-meta.xml
<ListView>
    <fullName>All_RMA</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RMA_Shipment_Order__c.RMA</value>
    </filters>
    <label>All RMA</label>
    <language>en_US</language>
</ListView>