All_Component_DX/force-app/main/default/objects/RMA_Shipment_Order__c/listViews/All_Shipments.listView-meta.xml
<ListView>
    <fullName>All_Shipments</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RMA_Shipment_Order__c.Shipment</value>
    </filters>
    <label>All Shipments</label>
    <language>en_US</language>
</ListView>